tests/negative/regression/r2.orng
let const a: 1[2]() = 0